<resources>
    <string name="app_name">E-Channelling</string>
    <string name="txt31">Add feed back</string>
    <string name="txt32">Support Service</string>
    <string name="txt33">-0112222222-</string>
    <string name="edit14">your comments...</string>
    <string name="button12">OK</string>
    <string name="button13">Cancel</string>
    <string name="txt37">E - Channelling Member Card</string>
    <string name="edit16">Full name</string>
    <string name="edit17">NIC</string>
    <string name="edit18">Contact number</string>
    <string name="edit19">User name</string>
    <string name="edit20">Password</string>
    <string name="button16">Create member card</string>
    <string name="txt6">Add Patient Details</string>
    <string name="txt7">Full Name :</string>
    <string name="txt8">Last Name :</string>
    <string name="txt9">Gender :</string>
    <string name="txt10">E-mail :</string>
    <string name="txt11">NIC :</string>
    <string name="txt12">Contact Number :</string>
    <string name="txt13">Age :</string>
    <string name="radio1">Male</string>
    <string name="radio2">Female</string>
    <string name="edit7">123456789V</string>
    <string name="edit8">Roshan</string>
    <string name="edit9">roshan@gmail.com</string>
    <string name="edit11">0112325621</string>
    <string name="edit12">Colombo</string>
    <string name="edit13">25</string>
    <string name="button9">INSERT</string>
    <string name="txt1">Insert is successful!</string>
    <string name="button1">OK</string>
    <string name="button4">Done</string>
    <string name="txt2">Update your details</string>
    <string name="edit1">NIC</string>
    <string name="edit2">E-mail</string>
    <string name="edit3">Contact Number</string>
    <string name="edit4">Age</string>
    <string name="edit5">Address</string>
    <string name="button2">Update details</string>
    <string name="txt4">Delete your details</string>
    <string name="edit6">NIC</string>
    <string name="button3">Delete details</string>
    <string name="txt5">Welcome to the E-Channelling</string>
    <string name="button5">Add patient details</string>
    <string name="button6">View doctor details</string>
    <string name="button7">Add feed back</string>
    <string name="button8">View patient profile</string>

</resources>